fix(guide) No spacing on top of sidebar

--- a/site/web/app/themes/sage/assets/styles/common/_global.scss
+++ b/site/web/app/themes/sage/assets/styles/common/_global.scss
@@ -569,7 +569,6 @@ h2:after {
 
 #guide-content h3 {
   text-transform: uppercase;
-  margin-top: 30px;
   font-size: 18px;
   padding-bottom: 5px;
   border-bottom: 1px solid #999;
